--- a/assets/sass/4-layouts/_post.scss
+++ b/assets/sass/4-layouts/_post.scss
@@ -223,9 +223,6 @@
     user-select: none;
   }
 
-  .button {
-    text-decoration: none;
-  }
 }
 
 /* Post Share */
